Create modal - order.

--- a/src/pug/season.pug
+++ b/src/pug/season.pug
@@ -132,7 +132,7 @@ block content
         )
 
 
-      +customBtn('season__container-cbtn', "СТОИМОСТЬ")
+      +customBtnId("#callback", 'season__container-cbtn js-popup', "СТОИМОСТЬ")
 
 block footer
   include ./components/_footer
