--- a/src/pug/shared/_mixins.pug
+++ b/src/pug/shared/_mixins.pug
@@ -18,7 +18,15 @@ mixin newsBlock(idx, className)
 
 
 mixin customBtn(className, text)
-  a.cbutton(href="javascript:void(0);" class= className)
+  a.cbutton(href="" class= className)
+    .cbutton__block
+      .cbutton__block-bg.cbutton__block-bg--0
+      .cbutton__block-bg.cbutton__block-bg--1
+    .cbutton__text!= text
+
+
+mixin customBtnId(href, className, text)
+  a.cbutton(href= href, class= className)
     .cbutton__block
       .cbutton__block-bg.cbutton__block-bg--0
       .cbutton__block-bg.cbutton__block-bg--1
