--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -3,7 +3,7 @@
 
 @import vendor/normalize
 @import vendor/slick
-//@import bower_components/magnific-popup/dist/magnific-popup
+@import bower_components/magnific-popup/dist/magnific-popup
 //@import vendor/hamburgers
 
 @import layout/font
@@ -26,6 +26,7 @@
 @import components/lang
 @import components/menu
 @import components/order
+@import components/modal
 //@import components/index
 
 @import components/homepage
