--- a/src/sass/components/_season.sass
+++ b/src/sass/components/_season.sass
@@ -62,6 +62,7 @@
 
   &__box
     cursor: pointer
+    overflow: hidden
     position: relative
     height: 600px
     margin-bottom: 113px
@@ -89,12 +90,22 @@
       height: 100%
       &:before
         content: ""
+        z-index: 1
         position: absolute
         top: 0
         left: 0
         width: 100%
         height: 100%
         background-color: rgba($colorBlack, 0.5)
+
+      img
+        z-index: 0
+        position: absolute
+        max-width: 100%
+        max-height: 100%
+        top: 50%
+        left: 50%
+        transform: translate(-50%, -50%)
 
     &-info
       z-index: 1
@@ -194,16 +205,22 @@
     > p
       font-size: 24px
 
+    &-container
+      width: 100%
+      max-width: 480px
+
+      &:nth-child(2)
+        margin:
+          left: 30px
+          right: 30px
+
     &-item
       display: flex
       align-items: center
       justify-content: center
-      width: 480px
+      width: 100%
       height: 480px
       margin-bottom: 10px
-      padding:
-        left: 100px
-        right: 100px
       background-color: $colorBlack
       font:
         size: 40px
