Some change text container - school.

--- a/src/pug/school.pug
+++ b/src/pug/school.pug
@@ -20,12 +20,13 @@ block content
 
           +customBtn('school__main-cbtn', "TAIKO TEAM")
 
-          p.school__text.school__text--0!= "Летом мы проводим интенсивные мастер-классы. Вы научитесь правильной стойке, базовым ритмам и различным техникам игры. Даже выучите несколько наших ярких номеров."
-          p.school__text.school__text--1!= "Каждый ученик, успешно показавший себя на занятиях, сможет стать частью группы TAIKO in-Spiration."
-          p.school__text.school__text--2!= "Скоро. Следите за новостями!"
+          .school__row-text
+            p!= "Летом мы проводим интенсивные мастер-классы. Вы научитесь правильной стойке, базовым ритмам и различным техникам игры. Даже выучите несколько наших ярких номеров."
+            p!= "Каждый ученик, успешно показавший себя на занятиях, сможет стать частью группы TAIKO in-Spiration."
+            p!= "Скоро. Следите за новостями!"
 
           .footer__question
-            p.footer__question-title!= 'ПО ВОПРОСАМ ЗАНЯТИЙ'
+            p!= 'ПО ВОПРОСАМ ЗАНЯТИЙ'
             a(href="tel:89199994858").footer__question-phone!= '8 (919) 999-48-58'
             a(href="mailto:info@taiko.moscow").footer__question-email!= 'INFO@TAIKO.MOSCOW'
 
