--- a/src/sass/components/_school.sass
+++ b/src/sass/components/_school.sass
@@ -36,22 +36,28 @@
     clear: both
     width: 47%
 
-  &__title
-    font-size: 40px
-    padding-left: 30px
-    margin-bottom: 10px
+    > p
+      font-size: 40px
+      padding-left: 30px
+      margin-bottom: 10px
 
-  &__text
-    font-size: 24px
+    &-text
 
-    &--0
-      margin-top: 70px
-    &--0,
-    &--1
-      margin-bottom: 58px
-    &--2
-      color: $colorFuelYellow
-      margin-bottom: 84px
+      p
+        font:
+          size: 24px
+          weight: normal
+        display: block
+
+        &:first-child
+          margin:
+            top: 70px
+            bottom: 58px
+        &:nth-child(2)
+          margin-bottom: 58px
+        &:last-child
+          color: $colorFuelYellow
+          margin-bottom: 84px
 
   .footer__question
     margin-bottom: 120px
