--- a/src/pug/shared/_layout.pug
+++ b/src/pug/shared/_layout.pug
@@ -27,8 +27,12 @@ html(lang="en")
           //  include ../components/_footer
 
       block modal
-        if(bodyClass === "season")
+        if(bodyClass === "season" || bodyClass === "programs")
           include ../components/_modal
+
+      block gallery
+        if(bodyClass === "programs")
+          include ../components/_gallery
 
       block scripts
         include _scripts
