--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -27,6 +27,7 @@
 @import components/menu
 @import components/order
 @import components/modal
+@import components/gallery
 //@import components/index
 
 @import components/homepage
