--- a/src/sass/components/_newsBlock.sass
+++ b/src/sass/components/_newsBlock.sass
@@ -8,7 +8,8 @@
     &-elem
       cursor: pointer
       position: relative
-      width: 480px
+      width: 100%
+      max-width: 480px
       height: 480px
       box-shadow: 0 5px 21px 9px rgba(0, 0, 0, 0.3)
       &:hover
@@ -30,7 +31,7 @@
         background-repeat: no-repeat
         background-size: cover
       &--full
-        width: 1020px
+        max-width: 1020px
         background-image: url("../img/ImagePreview-full_news.jpg")
         background-repeat: no-repeat
         background-size: cover
