--- a/src/sass/components/_season.sass
+++ b/src/sass/components/_season.sass
@@ -8,7 +8,7 @@
     background-color: $colorBlack
     background-image: url("../img/ImageBgMain_season.jpg")
     background-repeat: no-repeat
-    background-position: top left
+    background-position: center
     background-size: cover
     +rmin(1024)
       min-height: 760px
