--- a/src/sass/components/_order.sass
+++ b/src/sass/components/_order.sass
@@ -24,35 +24,72 @@
     position: absolute
     top: 0
     right: 0
-    width: 660px
-    //height: 100%
-    padding:
-      top: 88px
-      left: 60px
-      right: 60px
-      bottom: 127px
+    height: 100%
     background-color: $colorNero
     box-shadow: 0 0 36px 24px rgba(0, 0, 0, 0.5)
+    +rmin(1024)
+      width: 540px
+      padding:
+        top: 68px
+        left: 40px
+        right: 40px
+        bottom: 107px
+    +rmin(1440)
+      width: 600px
+      padding:
+        top: 78px
+        left: 50px
+        right: 50px
+        bottom: 117px
+    +rmin(1920)
+      width: 660px
+      padding:
+        top: 88px
+        left: 60px
+        right: 60px
+        bottom: 127px
 
   &__phone,
   &__email
     &-title
-      font-size: 24px
       margin-bottom: 5px
       color: $colorNobel
+      +rmin(1024)
+        font-size: 20px
+      +rmin(1440)
+        font-size: 22px
+      +rmin(1920)
+        font-size: 24px
     &-number
       color: $colorWhite
       font:
-        size: 40px
         weight: bold
+      +rmin(1024)
+        font-size: 30px
+      +rmin(1440)
+        font-size: 35px
+      +rmin(1920)
+        font-size: 40px
 
   &__phone
     &-wrap
-      margin-bottom: 50px
+      +rmin(1024)
+        margin-bottom: 30px
+      +rmin(1440)
+        margin-bottom: 40px
+      +rmin(1920)
+        margin-bottom: 50px
 
   &__email
     &-wrap
       margin-bottom: 90px
+      +rmin(1024)
+        margin-bottom: 70px
+      +rmin(1440)
+        margin-bottom: 80px
+      +rmin(1920)
+        margin-bottom: 90px
+
 
   &__phone,
   &__email
@@ -63,10 +100,18 @@
     &-title
       margin-bottom: 36px
       font:
-        size: 24px
         weight: bold
       text-align: center
       color: $colorNobel
+      +rmin(1024)
+        font-size: 20px
+        margin-bottom: 30px
+      +rmin(1440)
+        font-size: 22px
+        margin-bottom: 33px
+      +rmin(1920)
+        font-size: 24px
+        margin-bottom: 36px
 
     &-social
       display: flex
@@ -74,6 +119,13 @@
       width: 100%
       height: 60px
       margin-bottom: 30px
+
+      +rmin(1024)
+        margin-bottom: 20px
+      +rmin(1440)
+        margin-bottom: 25px
+      +rmin(1920)
+        margin-bottom: 30px
 
       a
         display: flex
@@ -104,15 +156,18 @@
             opacity: 0
             visibility: hidden
 
-    &-icon
-      &--normal
-      &--hover
-
     &-field
       width: 100%
       height: 60px
       margin-bottom: 30px
       border: 5px solid $colorBlack
+
+      +rmin(1024)
+        margin-bottom: 20px
+      +rmin(1440)
+        margin-bottom: 25px
+      +rmin(1920)
+        margin-bottom: 30px
 
       &--phone
         border-color: $colorFuelYellow
@@ -128,18 +183,34 @@
             color: $colorFuelYellow
 
       &--email
-        margin-bottom: 36px
+        +rmin(1024)
+          margin-bottom: 30px
+        +rmin(1440)
+          margin-bottom: 33px
+        +rmin(1920)
+          margin-bottom: 36px
+
       &--date
-        margin-bottom: 60px
+        +rmin(1024)
+          margin-bottom: 40px
+        +rmin(1440)
+          margin-bottom: 50px
+        +rmin(1920)
+          margin-bottom: 60px
 
       input
         width: 100%
         line-height: (60px - 10)
         font:
-          size: 24px
           weight: bold
         text-align: center
         color: $colorWhite
         background-color: transparent
         border: none
+        +rmin(1024)
+          font-size: 20px
+        +rmin(1440)
+          font-size: 22px
+        +rmin(1920)
+          font-size: 24px
 
