--- a/src/sass/components/_order.sass
+++ b/src/sass/components/_order.sass
@@ -9,7 +9,7 @@
   width: 100vw
   height: 100vh
   background-color: rgba($colorBlack, 0.5)
-  overflow: auto
+  overflow: hidden
 
   .is-activeOrder &
     display: block
@@ -27,6 +27,7 @@
     height: 100%
     background-color: $colorNero
     box-shadow: 0 0 36px 24px rgba(0, 0, 0, 0.5)
+    overflow: auto
     +rmin(1024)
       width: 540px
       padding:
